--- a/app-rbac/angular.json
+++ b/app-rbac/angular.json
@@ -75,7 +75,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app-rbac:build"
+            "browserTarget": "app-rbac:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
