--- a/app-rbac/package.json
+++ b/app-rbac/package.json
@@ -11,56 +11,57 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/localize": "^9.1.12",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@coreui/angular": "^2.7.2",
+    "@angular/animations": "^9.1.12",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/forms": "^9.1.12",
+    "@angular/localize": "^10.1.2",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/router": "^9.1.12",
+    "@coreui/angular": "~2.9.4",
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
-    "@coreui/icons": "^1.0.0",
-    "angular-in-memory-web-api": "^0.9.0",
-    "bootstrap": "^4.4.1",
+    "@coreui/icons": "^1.0.1",
+    "@swimlane/ngx-datatable": "^18.0.0",
+    "angular-in-memory-web-api": "^0.11.0",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
-    "core-js": "^3.6.1",
-    "flag-icon-css": "^3.4.5",
+    "core-js": "^3.6.5",
+    "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
-    "moment": "^2.24.0",
-    "mutationobserver-shim": "^0.3.3",
-    "ng2-charts": "^2.3.0",
-    "ngx-bootstrap": "^5.2.0",
-    "ngx-perfect-scrollbar": "^8.0.0",
-    "rxjs": "~6.4.0",
-    "simple-line-icons": "^2.4.1",
+    "moment": "^2.27.0",
+    "mutationobserver-shim": "^0.3.7",
+    "ng2-charts": "^2.3.2",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-perfect-scrollbar": "^9.0.0",
+    "rxjs": "^6.6.0",
+    "simple-line-icons": "^2.5.2",
     "ts-helpers": "^1.1.2",
-    "tslib": "^1.10.0",
+    "tslib": "^1.13.0",
     "web-animations-js": "^2.3.2",
-    "zone.js": "^0.9.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.21",
-    "@angular/cli": "~8.3.21",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "@angular-devkit/build-angular": "^0.901.12",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
+    "@types/jasmine": "^3.5.12",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^13.13.14",
+    "codelyzer": "^5.2.2",
+    "jasmine-core": "^3.6.0",
+    "jasmine-spec-reporter": "^5.0.2",
+    "karma": "^5.1.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3",
+    "typescript": "~3.7.5"
   }
 }
